[package]
name = "kademlia_dht"
version = "0.1.0"
authors = ["zain"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
hex = "0.4.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
crossbeam-channel = "0.5.1"
actix-web = "4"
actix-cors = "0.6"
log = "0.4.0"
env_logger = "0.9.0"
serde_derive = "0.9"
clap = { version = "3.1.9", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full", "sync"] }
futures = "0.3.21"
